# backend

./: .gitignore  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  database_schema.sql  financial_app.db  pyproject.toml  requirements.txt  vercel.json
api/: index.py
scripts/: seed_data.py
src/: __init__.py  auth.py  auth_local.py  config.py  database.py  main.py  models.py  schemas.py
src/api/: auth.py  transfers.py
src/services/: transfer_service.py
