[tool.poetry]
name = "financial-p2p-backend"
version = "1.0.0"
description = "FastAPI backend for Financial P2P Application with Supabase"
authors = ["Brex Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
pyjwt = "^2.8.0"
python-multipart = "^0.0.6"

# Optional - only if using Supabase/PostgreSQL
# psycopg2-binary = "^2.9.9"
# supabase = "^2.3.0"
# alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

